[package]
name = "websocket-game-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
bevy = { version = "0.10" }
futures-util = { version = "0.3.17", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "1.11.0", default-features = false, features = ["io-util", "macros",  "time", "sync", "net", "rt-multi-thread", "io-std"] }
quick-protobuf = {git="https://github.com/Descrout/quick-protobuf"}
tokio-tungstenite = "0.18.0"
futures-channel = "0.3.26"
url = "2.3.1"
crossbeam-channel = "0.5.7"
dashmap = "5.4.0" # Concurrent HashMaps. Makes storing messages and mutating them over multiple threads possible.
thiserror = "1.0.39"

[build-dependencies]
pb-rs = "0.10.0" # Compiles .proto files to a rust module. ProtoBuffers are used to convert structs to binary messages that are sent over the websocket.
walkdir = "2.3.2" # So pb-rs can easily traverse the filesystem in an epic quest to find the .proto files.

# Do little optimization on code in this project, as recompiling it takes very long.
# When building for production, optimization is done.
[profile.dev]
opt-level = 1

# Do a lot of optimization on packages, even in dev mode. Packages do not need to be
# recompiled, so optimization is worth it.
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]